--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@salurusrinivasarao/emarsys-sdk-wrapper-plugin",
+  "name": "@LLA-io/emarsys-sdk-wrapper-plugin",
   "version": "1.0.2",
   "description": "Custom Capacitor Plugin To have communication with Emarsys SDK",
   "main": "dist/plugin.cjs.js",
@@ -13,17 +13,18 @@
     "ios/Plugin/",
     "SalurusrinivasaraoEmarsysSdkWrapperPlugin.podspec"
   ],
-  "author": "srinivassaluru",
+  "author": "DEV EY",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/srinivassaluru/emarsys-sdk-wrapper-plugin.git"
+    "url": "git+https://github.com/LLA-io/emarsys-sdk-wrapper-plugin.git"
   },
   "bugs": {
-    "url": "https://github.com/srinivassaluru/emarsys-sdk-wrapper-plugin.git/issues"
+    "url": "https://github.com/LLA-io/emarsys-sdk-wrapper-plugin.git/issues"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "private",
+    "registry": "https://npm.pkg.github.com/@LLA-io"
   },
   "keywords": [
     "capacitor",
@@ -79,7 +80,7 @@
       "src": "android"
     }
   },
-  "homepage": "https://github.com/srinivassaluru/emarsys-sdk-wrapper-plugin#readme",
+  "homepage": "https://github.com/LLA-io/emarsys-sdk-wrapper-plugin#readme",
   "directories": {
     "example": "example"
   }
