--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@LLA-io/emarsys-sdk-wrapper-plugin",
-  "version": "1.0.2",
+  "name": "@lla-io/emarsys-sdk-wrapper-plugin",
+  "version": "1.0.0",
   "description": "Custom Capacitor Plugin To have communication with Emarsys SDK",
   "main": "dist/plugin.cjs.js",
   "module": "dist/esm/index.js",
@@ -23,8 +23,8 @@
     "url": "https://github.com/LLA-io/emarsys-sdk-wrapper-plugin.git/issues"
   },
   "publishConfig": {
-    "access": "restricted",
-    "registry": "https://npm.pkg.github.com/@LLA-io"
+    "access": "public",
+    "registry": "https://npm.pkg.github.com"
   },
   "keywords": [
     "capacitor",
@@ -45,7 +45,8 @@
     "build": "npm run clean && npm run docgen && tsc && rollup -c rollup.config.js",
     "clean": "rimraf ./dist",
     "watch": "tsc --watch",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "deploy": "npm publish"
   },
   "devDependencies": {
     "@capacitor/android": "^4.0.0",
@@ -80,7 +81,7 @@
       "src": "android"
     }
   },
-  "homepage": "https://github.com/LLA-io/emarsys-sdk-wrapper-plugin#readme",
+  "homepage": "https://github.com/lla-io/emarsys-sdk-wrapper-plugin#readme",
   "directories": {
     "example": "example"
   }
